# Learning-OpenGL

CMake-tutorial/: CMakeLists.txt  HelloWord.cpp
Primitives/: CMakeLists.txt
Primitives/src/: Example_TextDates.cpp  Line_Bresenham.cpp  Line_DDA.cpp  Window.cpp
